--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+EXHENTAI_MEMBER_ID=
+EXHENTAI_PASS_HASH=
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
