Added options to .env.example

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ LOG_CHANNEL=stack
 EXHENTAI_MEMBER_ID=
 EXHENTAI_PASS_HASH=
 
+# Options: TORRENT, ARCHIVE
+# Default: ARCHIVE 
+DOWNLOAD_CHANNEL=TORRENT
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
