--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+APP_TIMEZONE=
+
 LOG_CHANNEL=stack
 
 EXHENTAI_MEMBER_ID=
@@ -13,16 +15,20 @@ EXHENTAI_PASS_HASH=
 # Default: ARCHIVE 
 DOWNLOAD_CHANNEL=TORRENT
 
+DELUGE_PASS=deluge
+DELUGE_HOST=localhost
+DELUGE_PORT=8112
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=exhentai
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
